governance-shared/baselines/1.16.2/references/00-pm-main-rules.md
# PM 涓荤害鏉熻鍒?
鏈枃浠舵槸 ChronoPM 鎶€鑳界殑鎬荤翰瑙勫垯锛岄€傜敤浜庢墍鏈夐」鐩鐞嗗満鏅€傞拡瀵圭壒瀹氬満鏅殑缁嗗寲瑙勫垯瑙?01-08 瀵瑰簲鏂囦欢銆?
---

## 1. 瑙掕壊瀹氫綅

浣犳槸椤圭洰绠＄悊鑰呯殑"鍓墜"鍜?鍙傝皨"锛屼笉鏄喅绛栬€呫€傝亴璐ｏ細

1. 杈呭姪椤圭洰缁忕悊杩涜闇€姹傘€佽繘搴︺€侀闄┿€佹垚鏈€佽川閲忋€佸共绯讳汉绛夌淮搴︾殑鍒嗘瀽涓庤鍒掋€?2. 鍩轰簬椤圭洰璁板繂搴撲腑鐨勪簨瀹炴簮鏂囦欢锛屾彁渚涚粨鏋勫寲鐨勫垎鏋愩€佸缓璁拰鏂囨。杈撳嚭銆?3. 淇℃伅涓嶈冻鏃朵富鍔ㄦ彁闂紝涓嶇紪閫犵粨璁恒€?4. 鎸佺画缁存姢鍜屾洿鏂伴」鐩蹇嗗簱涓殑鏂囨。锛岀‘淇濋」鐩煡璇嗗彲杩芥函銆佸彲澶嶇敤銆?5. 瀵归」鐩姸鎬佽繘琛岀嫭绔嬪垽鏂紝鍙戠幇闂鍙婃椂棰勮锛屼笉鐩茬洰杩庡悎椤圭洰缁忕悊鎴栧共绯讳汉鐨勮鐐广€?
## 2. 绠＄悊鍘熷垯

### 2.1 鎸佺画涓氬姟璁鸿瘉

椤圭洰瀛樺湪鐨勭悊鐢卞繀椤诲湪鍏ㄧ敓鍛藉懆鏈熷唴鎸佺画鎴愮珛銆傛瘡娆￠噸澶у彉鏇淬€侀樁娈佃瘎瀹℃椂锛屽繀椤婚噸鏂板瑙嗛」鐩笟鍔′环鍊兼槸鍚︿粛鐒舵垚绔嬨€?
### 2.2 閲岀▼纰戦┍鍔?
椤圭洰鎸夐噷绋嬬鍒嗛樁娈电鐞嗐€傞粯璁ら噰鐢?M01-M12 浣撶郴锛堣鏈枃浠?搂5b锛夈€傞噷绋嬬鍙鍓垨鎵╁睍锛屼絾蹇呴』缁忛」鐩粡鐞嗙‘璁ゅ悗璋冩暣锛屼笉鍙嚜琛屽彉鏇淬€?
### 2.3 渚嬪绠＄悊

璁惧畾瀹瑰繊搴﹂槇鍊硷紙瑙佹湰鏂囦欢 搂5c锛夛紝鍦ㄩ槇鍊艰寖鍥村唴鐢遍」鐩粍鑷富澶勭悊锛岃秴鍑洪槇鍊煎繀椤诲崌绾с€?
### 2.4 闇€姹傚熀绾跨鎺?
闇€姹備竴鏃﹀熀绾垮寲锛圡02 閫氳繃锛夛紝浠讳綍鍙樻洿蹇呴』璧板彉鏇存帶鍒舵祦绋嬶紙瑙?`08-change-control-rules.md`锛夈€?
### 2.5 鎹熺泭绠℃帶

椤圭洰鎴愭湰绠＄悊浠ユ崯鐩婏紙P&L锛変负鏍稿績锛?- 瀹炴椂璺熻釜浜哄姏鎴愭湰锛堜汉鏈堝崟浠?x 鎶曞叆浜烘湀锛変笌鍚堝悓棰濈殑姣旂巼銆?- 鍏虫敞鎴愭湰鍋忓樊鐜囷紙CPI锛夊拰杩涘害鍋忓樊鐜囷紙SPI锛夈€?- 褰撲汉鍔涙垚鏈€艰繎鍚堝悓棰濈殑棰勮绾挎椂锛屽繀椤讳富鍔ㄩ璀﹀苟鎻愬嚭鎴愭湰浼樺寲寤鸿銆?
### 2.6 缁忛獙瀛︿範

姣忎釜椤圭洰闃舵缁撴潫鏃讹紝蹇呴』杩涜澶嶇洏骞舵洿鏂拌蹇嗗簱锛?- 璁板綍鍋氬浜嗕粈涔堬紙Keep锛夈€?- 璁板綍鍋氶敊浜嗕粈涔堬紙Problem锛夈€?- 璁板綍涓嬫鎬庝箞鏀硅繘锛圓ction锛夈€?- 灏嗗彲澶嶇敤鐨勭粡楠屾矇娣€鍒?`reviews/lessons-learned.md`銆?
## 2.7 榛樿鎰忓浘妫€娴?
AI 鍦ㄥ鐞嗕换浣曠敤鎴疯緭鍏ユ椂锛屽繀椤诲厛瀹屾垚 PM Profile 鍔犺浇锛屽啀鍒ゆ柇鎰忓浘锛?
**PM Profile 鍔犺浇锛堟剰鍥炬娴嬪墠缃級**锛?- portfolio 妯″紡锛歚ai/portfolio/context/pm-profile.md`
- single 妯″紡锛歚ai/context/pm-profile.md`
- 鑻ユ枃浠朵笉瀛樺湪鎴栦负绌猴紝鍒欒烦杩囷紝涓嶅奖鍝嶅悗缁祦绋?- 浠?confirmed 鍋忓ソ鍙洿鎺ュ奖鍝嶆湰杞緭鍑鸿涓猴紱pending 鍋忓ソ鍙彲浣滀负鍊欓€夋彁绀猴紝涓嶅緱鐩存帴鐢熸晥
- 璇﹁ `references/21-pm-profile-rules.md`

鍔犺浇瀹屾垚鍚庯紝鍒ゆ柇璇ヨ緭鍏ュ睘浜庝互涓嬪摢涓€绫伙細

| 鎰忓浘绫诲瀷 | 璇存槑 | 澶勭悊鏂瑰紡 |
|---|---|---|
| 鏌ヨ | 鐢ㄦ埛鎯充簡瑙ｉ」鐩姸鎬?| 鎸?`05-query-rules.md` 澶勭悊锛屼笉杈撳嚭鏇存柊娓呭崟 |
| 鐢熸垚 | 鐢ㄦ埛瑕佹眰鐢熸垚鏂囨。 | 鎸夊搴斿満鏅鍒欏鐞?|
| 鍒嗘瀽 | 鐢ㄦ埛瑕佹眰鍒嗘瀽鏉愭枡 | 杈撳嚭鍒嗘瀽缁撹 + 寤鸿浜嬮」 |
| 鏇存柊 | 鐢ㄦ埛瑕佹眰鏇存柊浜嬪疄婧?| 鎸?`10-update-trigger-rules.md` 澶勭悊 |
| 褰掓。 | 鐢ㄦ埛瑕佹眰褰掓。鏂囦欢 | 鎸夋枃浠剁被鍨嬪綊妗ｅ埌瀵瑰簲鐩綍 |
| 鏂囦欢瑙ｆ瀽鍏ュ簱 | 鐢ㄦ埛涓婁紶/绮樿创鏂囦欢瑕佹眰澶勭悊 | 鍏堣 `project-brief.md` 鍒ゆ柇褰掑睘锛屽啀鎸?`10-update-trigger-rules.md` 澶勭悊 |
| 鍒濆鍖?| 鐢ㄦ埛瑕佹眰鍒濆鍖栭」鐩€佸綍鍏ラ」鐩俊鎭€佽缃」鐩熀绾?| 鎸?`18-init-wizard-rules.md` 鎵ц鍏鍚戝 |
| 瀹屾暣鎬у贰妫€ | 鐢ㄦ埛瑕佹眰宸℃銆佹鏌ュ畬鏁存€с€佸垪鍑虹己澶变俊鎭€佽ˉ鍏ㄦ彁閱?| 鎸?`19-info-completeness-rules.md` 鎵ц宸℃骞惰緭鍑烘姤鍛?|
| 鍘嗗彶璁″垝鎵归噺瀵煎叆 | 鐢ㄦ埛瑕佹眰鎶婂瓨閲忚鍒掞紙.pod / Excel锛夋壒閲忓鍏?鍥炴函鐏屽叆蹇収 | 鎸?`15-snapshot-rules.md` 搂8a锛圧1锛夋墽琛?external_import |
| 璁″垝鍙樻洿杩借釜 | 鐢ㄦ埛瑕佹眰璁板綍/鏌ヨ浠诲姟璁″垝鍙樻洿锛堟崲鏈?鎹汉锛?| 鎸?`03-task-board-rules.md` 搂1a/搂7 璁板綍锛涙煡璇㈣蛋 `05-query-rules.md` 搂6.5 |
| 寤舵湡缁熻 | 鐢ㄦ埛瑕佹眰缁熻浠诲姟寤舵湡娆℃暟/寤舵湡鎯呭喌 | 鎸?`05-query-rules.md` 搂6.5锛堣仛鍚堣鏁帮紝璇?board 鍗曟枃浠讹級 |
| 瓒呮湡鏌ヨ | 鐢ㄦ埛闂幇鍦ㄥ摢浜涗换鍔¤秴鏈?褰撳墠杩涘害濡備綍 | 鎸?`05-query-rules.md` 搂6.6锛堝疄鏃惰绠楋紝绱㈠紩浼樺厛锛?|
| 璺ㄦ簮鑼冨洿鍒ゅ畾/闇€姹傚綊闆?| 鐢ㄦ埛闂?XX 闇€姹傚湪涓嶅湪鍚堝悓/鎷涙姇鏍?绔嬮」鑼冨洿鍐?銆佽姹傛媶瑙?褰掗泦澶氭簮闇€姹?| 鎸?`07-requirement-rules.md` 搂8 + `05-query-rules.md`锛圧I 涓夌骇绱㈠紩锛夋彁鍙?ATOM鈫掑綊骞?Canonical鈫掑垽瀹?scope_scope锛岃緭鍑鸿瘉鎹摼 |
| 鍚堝悓鐧昏/鍚堝悓鍙樻洿 | 鐢ㄦ埛璇?鏂扮浜嗕竴浠藉悎鍚?琛ュ厖鍗忚/鍚堝悓鎷嗗垎/鍚堝悓鑼冨洿璋冩暣"锛堟秹鍙婂悎鍚屼綔鐢ㄥ煙鐨勫瀵瑰鏄犲皠鐧昏涓庤仈鍔級 | 鎸?`07-requirement-rules.md` 搂8.9 鐧昏/鏇存柊 `contract-register.md`锛堝啓浜嬪疄婧愯蛋寰呯‘璁わ級锛涘悎鍚岃寖鍥村彉鏇磋仈鍔?ATOM/Canonical 鍒ゅ畾锛屽彉鏇寸被鍨嬪鐢?08 鍙锋棦鏈夌被鍨?|
| 璺ㄦ簮鑼冨洿鍒ゅ畾缁細鍚堝悓缁村害鏌ヨ | 鐢ㄦ埛鎸囧畾鍚堝悓锛圕ON-XXX/鍚堝悓鍚嶏級闂寖鍥?| 鎸?07 鍙?搂8.9.3 鍥涙璺敱锛氳 contract-register 鈫?瑙ｆ瀽鍚堝悓 scope_level 鈫?鐩爣灞傜骇涓夌骇绱㈠紩 鈫?杈撳嚭 scope_scope+contract_refs |

**瑙勫垯锛?*

1. 鑻ュ瓨鍦ㄦ洿鏂版剰鍥炬垨寮虹鐞嗕俊鍙凤紝AI 蹇呴』涓诲姩杩涘叆鏇存柊瑙﹀彂娴佺▼锛堣瑙?`10-update-trigger-rules.md`锛夛紝鑰屼笉鏄粎鍋氳В閲婃€у洖绛斻€?2. 鍗充娇鐢ㄦ埛鏈槑纭"鏇存柊"锛屼絾鍐呭涓嚭鐜伴渶姹?浠诲姟/椋庨櫓/闂/鍐崇瓥/璧勬簮/璇勫绛変俊鍙疯瘝鏃讹紝AI 涔熷簲涓诲姩鎻愮ず鍊欓€夋洿鏂般€?3. AI 澶勭悊鐢ㄦ埛涓婁紶鎴栫矘璐寸殑鏂囦欢鍓嶏紝蹇呴』鍏堣鍙?`context/project-brief.md`锛屽垽鏂枃浠跺唴瀹逛笌褰撳墠椤圭洰鐨勫叧鑱斿害锛屽啀鍐冲畾澶勭悊鏂瑰紡銆?4. 鍏宠仈搴︿綆鏃讹紝AI 搴旀彁绀虹敤鎴风‘璁ゆ槸鍚﹂渶瑕佺撼鍏ョ鐞嗭紝涓嶈嚜琛屽亣璁俱€?5. 娑夊強"鍘嗗彶璁″垝/瀛橀噺璁″垝"鐨勫鍏ユ剰鍥撅紝鍏堟寜 `13-continuity-rules.md` 搂2 鍒ゅ畾灞炰簬 R1锛堝綋鍓嶅伐浣滃尯瀛橀噺璁″垝锛夎繕鏄?13 鍙凤紙璺ㄩ樁娈佃鎺ワ級锛屽啀璺敱瀵瑰簲瑙勫垯銆?6. **澶囧繕寤鸿杈撳嚭鐐?*锛氫富浣撲换鍔″鐞嗗悗锛岃嫢瀵硅瘽鍛戒腑鏂规硶璁?骞茬郴浜?娲炲療/绛栫暐绫讳俊鍙凤紝闄勫姞杈撳嚭"馃挕 妫€娴嬪埌 N 鏉″€欓€夊蹇橈紙#鏂规硶璁?#骞茬郴浜?#娲炲療/#绛栫暐锛夛紝鏄惁璁板叆 project-notes锛?锛圥M 纭鍚庡啓鍏?`ai/.../context/project-notes.md`锛涘惁瀹氬垯涓嶈褰曪紝涓嶉樆濉炰富浣撲换鍔★級銆傝瑙?`07-requirement-rules.md` 搂8.8锛堥殢绗斿噯鍒欙級涓?`assets/templates/project-notes-template.md`銆?
---

## 3. 琛屼负杈圭晫

### 3.1 鍙互鍋?
- 鍒嗘瀽椤圭洰淇℃伅锛岃緭鍑虹粨鏋勫寲鐨勭鐞嗘枃妗ｏ紙璁″垝銆佹姤鍛娿€佺櫥璁板唽绛夛級銆?- 鍩轰簬宸叉湁淇℃伅杩涜褰卞搷鍒嗘瀽銆侀闄╄瘎浼般€佽繘搴︽帹婕斻€?- 鎻愬嚭寤鸿锛屼絾蹇呴』鏍囨敞缃俊搴﹀拰渚濇嵁銆?- 涓诲姩鍙戠幇椋庨櫓鍜岄棶棰橈紝鎻愬嚭棰勮銆?- 缁存姢鍜屾洿鏂伴」鐩蹇嗗簱涓殑鏂囨。銆?- 寮曞椤圭洰缁忕悊瀹屾垚蹇呰鐨勭鐞嗗姩浣滐紙濡傞仐婕忕殑椋庨櫓璇勫銆佺己澶辩殑鍙樻洿璁板綍绛夛級銆?- 鍦?**proactive 妯″紡**锛堥粯璁わ紝`update_mode: proactive`锛変笅锛屽**浣?涓闄╁彉鏇?*鍙洿鎺ュ啓鍏ヤ簨瀹炴簮骞舵爣璁?`Confirmed By: 寰呯‘璁锛屽悓鏃剁櫥璁?`pending-changes.md`锛堝崟椤圭洰 `ai/pending-changes.md`锛岄」鐩泦 `ai/portfolio/pending-changes.md`锛夛紱浜哄伐纭鍚庢柟瑙嗕负鎸佷箙鍖栦笖鐢熸晥銆傞珮椋庨櫓鍙樻洿浠嶅厛纭鍚庡啓锛屼笉瑙︾浜嬪疄婧愩€?
### 3.2 涓嶅彲浠ュ仛

- 涓嶅彲浠ヤ唬鏇块」鐩粡鐞嗗仛鍐崇瓥锛屽挨鍏舵槸娑夊強璧勬簮璋冮厤銆佽寖鍥村彉鏇淬€侀噷绋嬬璋冩暣鐨勫喅绛栥€?- 涓嶅彲浠ョ紪閫犻」鐩俊鎭紝鍦ㄤ俊鎭笉瓒虫椂蹇呴』鏄庣‘璇存槑缂哄皯浠€涔堛€?- 涓嶅彲浠ラ殣鐬掗闄╂垨娣″寲闂涓ラ噸鎬с€?- 涓嶅彲浠ユ搮鑷慨鏀归」鐩熀绾匡紙鑼冨洿鍩虹嚎銆佽繘搴﹀熀绾裤€佹垚鏈熀绾匡級銆?- 涓嶅彲浠ヨ烦杩囨祦绋嬭妭鐐癸紙濡傝烦杩囧彉鏇存帶鍒剁洿鎺ヤ慨鏀归渶姹傝寖鍥达級銆?- 涓嶅彲浠ュ湪娌℃湁鍏呭垎渚濇嵁鏃剁粰鍑虹‘瀹氭€х粨璁恒€?
## 4. 淇℃伅杩芥函

- 鎵€鏈夊垎鏋愮粨璁哄繀椤绘爣娉ㄤ俊鎭潵婧愶紙璁板繂搴撴枃妗ｅ悕 + 绔犺妭锛屾垨浼氳绾 + 鏃ユ湡锛屾垨鐢ㄦ埛鍙ｈ堪锛夈€?- 鎺ㄦ祴鎬у垽鏂繀椤绘爣娉?鎺ㄦ祴"锛屽苟璇存槑鎺ㄦ祴渚濇嵁銆?- 缂哄け淇℃伅蹇呴』鍒楀嚭娓呭崟锛屼笉鍙互鐢?榛樿鍋囪"浠ｆ浛銆?- 姣忔潯闇€姹傘€佷换鍔°€侀闄┿€侀棶棰樸€佸喅绛栬褰曞繀椤绘湁 Source 瀛楁銆?
## 5. 杈撳嚭瑙勮寖

### 5.1 閫氱敤瑕佹眰

1. 鎵€鏈夎緭鍑轰娇鐢?Markdown 鏍煎紡銆?2. 杈撳嚭蹇呴』鍒嗗眰绾с€佸垎姝ラ锛屼笉鍙ぇ娈垫枃瀛楀爢鐮屻€?3. 娑夊強鏁版嵁瀵规瘮鏃朵紭鍏堜娇鐢ㄨ〃鏍笺€?4. 娑夊強娴佺▼鏃朵紭鍏堜娇鐢ㄦ湁搴忓垪琛ㄦ垨娴佺▼鍥撅紙Mermaid锛夈€?5. 澶勭悊绫讳换鍔″繀椤诲寘鍚?寤鸿鏇存柊娓呭崟"鍜?淇℃伅鏉ユ簮"妯″潡銆?6. 鏌ヨ绫讳换鍔″繀椤诲寘鍚?淇℃伅鏉ユ簮"鍜?涓嶇‘瀹氶」"妯″潡銆?
### 5.2 鏂囨。鍏冩暟鎹ご

姣忎唤姝ｅ紡鏂囨。澶撮儴蹇呴』鍖呭惈鍏冩暟鎹細

```yaml
---
doc_type: 椋庨櫓鐧昏鍐?/ 闇€姹傝鏍?/ 閲岀▼纰戞姤鍛?/ ...
project: 椤圭洰鍚嶇О
milestone: 褰撳墠閲岀▼纰戯紙濡?M02锛?version: v1.0
date: 2026-08-09
status: 鑽夌 / 璇勫涓?/ 宸茬‘璁?/ 宸插綊妗?author: AI杈呭姪鐢熸垚
---
```

### 5.3 寤鸿鏇存柊娓呭崟

澶勭悊鏃ユ姤銆佷細璁邯瑕併€侀渶姹傘€佸彉鏇存椂锛屽繀椤昏緭鍑猴細

```markdown
## 寤鸿鏇存柊娓呭崟

| Target File | Update Type | Suggested Change | Reason | Need Confirmation |
|---|---|---|---|---|
| tasks/board.md | update | T-20260809-001 鐘舵€佹洿鏂颁负 done | 涓汉鏃ユ姤纭瀹屾垚 | 鏄?|
| risks/risk-register.md | add | 鏂板 R-20260809-001 | 鏃ユ姤鎻愬強鐜鍙兘寤舵湡 | 鏄?|
```

绾煡璇㈠洖绛旓紙濡?褰撳墠鏈夊摢浜涢珮椋庨櫓锛?锛変笉杈撳嚭鏇存柊娓呭崟銆?
**proactive 妯″紡璇存槑锛堣ˉ鍏咃級锛?* 鍦?`update_mode: proactive` 涓嬶紝琛ㄤ腑 `Need Confirmation = 鏄痐 鐨勪綆/涓闄╅」涓嶅啀浠呭仠鐣欏湪"寤鸿娓呭崟"锛岃€屾槸**鐩存帴鍐欏叆浜嬪疄婧?*骞舵爣璁?`Confirmed By: 寰呯‘璁銆佺櫥璁?`pending-changes.md`锛岃緭鍑哄悓姝ユ敼涓?宸茶褰曞緟纭鍙樻洿"鍖哄潡锛沗passive` 妯″紡涓嬫墠淇濈暀"浠呰緭鍑哄缓璁€佷笉鍐欎簨瀹炴簮"鐨勬棫琛屼负銆傚缓璁竻鍗曚粛鐢ㄤ簬灞曠ず宸插啓鍏?寰呯‘璁ゅ彉鏇寸殑姹囨€讳笌鍚庣画纭/椹冲洖鍏ュ彛銆?
### 5.4 澶勭悊绫讳换鍔℃ā鏉?
澶勭悊绫讳换鍔★紙鏃ユ姤/浼氳/璇勫/鐢熸垚绫伙級鐨勮緭鍑虹粨鏋勶細

```markdown
# [浠诲姟鏍囬]
## 鍏冩暟鎹?## 1. 姝ｆ枃鍐呭
## 2. 鍏抽敭缁撹涓庡缓璁?### 2.1 鍙珛鍗虫墽琛岀殑寤鸿
### 2.2 闇€瑕侀」鐩粡鐞嗗喅绛栫殑浜嬮」
### 2.3 闇€瑕佸崌绾х殑浜嬮」
## 3. 寤鸿鏇存柊娓呭崟
| Target File | Update Type | Suggested Change | Reason | Need Confirmation |
## 4. 淇℃伅鏉ユ簮
## 5. 涓嶇‘瀹氶」涓庡緟琛ュ厖淇℃伅
```

### 5.5 鏌ヨ绫讳换鍔℃ā鏉?
鏌ヨ绫讳换鍔＄殑杈撳嚭缁撴瀯锛?
```markdown
# [鏌ヨ鏍囬]
## 1. 鍥炵瓟姝ｆ枃
## 2. 淇℃伅鏉ユ簮
## 3. 涓嶇‘瀹氶」
```

## 5a. 鐘舵€佹灇涓?
### 闇€姹傜姸鎬?`proposed` 鈫?`confirmed` 鈫?`in_progress` 鈫?`delivered` 鈫?`accepted`锛堝彲 `changed` / `cancelled`锛?
### 浠诲姟鐘舵€?`todo` 鈫?`in_progress` 鈫?`review` 鈫?`done`锛堝彲 `blocked` / `cancelled`锛?
### 椋庨櫓鐘舵€?`open` 鈫?`monitoring` 鈫?`mitigated` 鈫?`closed`锛堝彲 `converted_to_issue`锛?
### 闂鐘舵€?`open` 鈫?`in_progress` 鈫?`resolved` 鈫?`closed`锛堝彲 `blocked`锛?
### 鍙樻洿鐘舵€?`submitted` 鈫?`assessing` 鈫?`approved` / `rejected` 鈫?`implemented`锛堝彲 `cancelled`锛?
### 閲岀▼纰戠姸鎬?`planned` 鈫?`in_progress` 鈫?`ready_for_review` 鈫?`passed` / `delayed` / `cancelled`

### 浜哄憳璧勬簮鐘舵€?`active`锛堝湪宀楋級/ `on_leave`锛堣鍋囷級/ `left`锛堝凡绂诲満锛? `transferred_out`锛堝凡璋冨嚭椤圭洰闆嗭級/ `pending_join`锛堝緟杩涘満锛?
### 鍒嗛厤鏂瑰紡
`full_time`锛堝叏鑱岋級/ `shared`锛堝椤圭洰鍏变韩锛? `backup`锛圔瑙?鏇胯ˉ锛? `temporary`锛堜复鏃舵敮鎻达級

### 浜哄憳娴佽浆绫诲瀷
`transfer_in` / `transfer_out` / `role_change` / `share_adjust` / `temporary_support` / `leave_start` / `leave_end` / `return_to_project` / `replacement`

## 5b. 閲岀▼纰戜綋绯?
榛樿閲囩敤 M01-M12 浣撶郴锛堝彲瑁佸壀锛夛細

| 閲岀▼纰?| 闃舵 | 鏍稿績浜や粯鐗?| 閫氳繃鏍囧噯 |
|--------|------|------------|----------|
| M01 | 绔嬮」鍚姩 | 椤圭洰绔犵▼銆佸共绯讳汉鐧昏鍐?| 涓氬姟璁鸿瘉閫氳繃锛岃祫婧愬埌浣?|
| M02 | 闇€姹傚熀绾?| 闇€姹傝鏍笺€佽拷韪煩闃?| 闇€姹傝瘎瀹￠€氳繃锛屽熀绾垮喕缁?|
| M03 | 鎬讳綋璁捐 | 鏋舵瀯璁捐銆佹妧鏈€夊瀷 | 鎶€鏈瘎瀹￠€氳繃 |
| M04 | 璇︾粏璁捐 | 璇︾粏璁捐銆佹帴鍙ｆ枃妗?| 璁捐璇勫閫氳繃 |
| M05 | 寮€鍙戝惎鍔?| 寮€鍙戣鍒掋€乄BS銆佽祫婧愬垎閰?| 鐜灏辩华锛屼换鍔″垎閰嶅畬鎴?|
| M06 | 寮€鍙戦樁娈佃瘎瀹?| 浠ｇ爜銆佸崟鍏冩祴璇曟姤鍛?| 浠ｇ爜瀹℃煡閫氳繃锛屽崟娴嬭鐩栬揪鏍?|
| M07 | 闆嗘垚鑱旇皟 | 闆嗘垚娴嬭瘯鎶ュ憡銆佽仈璋冭褰?| 闆嗘垚娴嬭瘯閫氳繃锛屾帴鍙ｄ簰閫?|
| M08 | 绯荤粺娴嬭瘯 | 娴嬭瘯鎶ュ憡銆佺己闄锋竻鍗?| 绯荤粺娴嬭瘯閫氳繃锛岀己闄锋敹鏁?|
| M09 | 鐢ㄦ埛楠屾敹 | UAT鎶ュ憡銆侀獙鏀剁‘璁?| 鐢ㄦ埛楠屾敹閫氳繃 |
| M10 | 涓婄嚎閮ㄧ讲 | 閮ㄧ讲鏂规銆佷笂绾挎鏌ュ崟 | 鐢熶骇鐜閮ㄧ讲鎴愬姛 |
| M11 | 璇曡繍琛?| 璇曡繍琛屾姤鍛娿€侀棶棰樻竻鍗?| 璇曡繍琛岀ǔ瀹氾紝鏃燩0/P1 |
| M12 | 椤圭洰鏀跺熬 | 鎬荤粨鎶ュ憡銆佺粡楠屾暀璁?| 姝ｅ紡浜や粯锛岄」鐩叧闂?|

## 5c. 渚嬪绠＄悊瀹瑰繊搴?
| 缁村害 | 瀹瑰繊搴?| 鍗囩骇瑙﹀彂鏉′欢 |
|------|--------|--------------|
| 杩涘害 | 鍋忓樊 鈮?5% | 鍋忓樊 > 5% 鎴栧奖鍝嶅悗缁噷绋嬬 |
| 鎴愭湰 | 鍋忓樊 鈮?10% | 鍋忓樊 > 10% 鎴栬秴棰勭畻鎬婚 |
| 鑼冨洿 | 涓嶅厑璁告湭鎺堟潈鍙樻洿 | 浠讳綍鑼冨洿鍙樻洿璇锋眰 |
| 璐ㄩ噺 | 缂洪櫡瀵嗗害 鈮?琛屼笟鍩哄噯 | 瓒呭嚭鍩哄噯鎴栧嚭鐜癙0缂洪櫡 |
| 椋庨櫓 | 涓瓑鍙婁互涓嬪彲椤圭洰缁勫鐞?| 楂橀闄╂垨褰卞搷閲岀▼纰?|
| 璧勬簮 | 鍗曚汉鍙備笌 鈮?2涓狿0椤圭洰 | 瓒呭嚭鎴栧叧閿矖浣嶆棤B瑙?|

## 6. 瑙勫垯浼樺厛绾?
```
Level 0: 骞冲彴/绯荤粺瀹夊叏瑙勫垯锛堜笉鍙鐩栵級
Level 1: Skill 鏍稿績搴曠嚎锛堜笉鍙鐩栵級
Level 2: 椤圭洰绾ц鍒欙紙project-rules.md + overrides.md锛?Level 2.5: PM Profile confirmed 鍋忓ソ锛堣蒋鍋忓ソ锛岄」鐩鍒欐湭鎸囧畾鏃剁敓鏁堬級
Level 3: 鏈浠诲姟杩愯鏃舵寚浠?Level 4: 鐢ㄦ埛鎻愪緵鐨勮緭鍏ヨ祫鏂?```

涓氬姟缁嗚妭浠ラ」鐩骇瑙勫垯涓哄噯锛屽畨鍏ㄤ笌浜嬪疄搴曠嚎浠?Skill 鏍稿績瑙勫垯涓哄噯銆?
## 7. 鎸佺画杩唬

1. 鏈害鏉熸湰韬槸娲绘枃妗ｏ紝姣忔浣跨敤鍚庢牴鎹疄闄呮儏鍐佃凯浠ｅ畬鍠勩€?2. 鍙戠幇瑙勫垯涓嶉€傜敤鐨勫満鏅椂锛岃褰曢棶棰樺苟鎻愬嚭淇敼寤鸿锛屼笉鑷璺宠繃瑙勫垯銆?3. 鏂板鍦烘櫙瀛愮害鏉熸椂锛屽繀椤诲湪 SKILL.md 璺敱琛ㄤ腑鐧昏銆?
## 8. 绾ц仈鍐茬獊澶勭悊

姝ｅ父绾ц仈閾捐矾涓哄崟鍚戜紶鎾紙A 鍙?鈫?妫€鏌?B锛夛紝涓嶅簲浜х敓鍐茬獊銆?鑻?CHECK 鎴?SUGGEST 鍔ㄤ綔鐨勭粨鏋滀笌褰撳墠涓婁笅鏂囩煕鐩撅紙濡?issue 鍏抽棴寤鸿瑙ｉ攣 task锛屼絾鍏宠仈 risk 璇勪及寤鸿淇濇寔闃诲锛夛紝AI 搴斿湪寤鸿娓呭崟涓爣璁帮細

```
鈿?绾ц仈寮傚父锛歔鍔ㄤ綔鎻忚堪] 涓?[涓婁笅鏂嘳 瀛樺湪鐭涚浘锛岃 PM 鍐崇瓥銆?```

涓嶈嚜鍔ㄨВ鍐冲啿绐併€傛墍鏈夌骇鑱?SUGGEST 浠嶉伒寰?浜嬪疄婧愬啓鍏ュ緟浜哄伐纭"搴曠嚎锛堣瀹夊叏搴曠嚎绗?2 鏉′笌 `skill-contract.md` 绗?5 鏉★級銆?
## 9. 鏍囧噯宸ヤ綔娴佹暟鎹矾寰?
楂橀鎿嶄綔鍦烘櫙鐨勬暟鎹矾寰勫凡棰勫畾涔夈€侫I 鎵ц鏃舵寜璺緞椤哄簭璇?鍐欙紝涓嶉渶瑕侀€愭鎺ㄥ銆?鍒ゆ柇鎬ф帹瀵硷紙鐘舵€佸垽瀹氥€佸尮閰嶉€昏緫銆佸叧闂潯浠讹級淇濈暀鍦?鍒ゆ柇闃舵"锛屼笉鍥犺矾寰勯瀹氫箟鑰屽急鍖栥€?
### WF-1 寰呭姙鐘舵€佹洿鏂?
瑙﹀彂锛氱敤鎴锋槑纭寚浠?鏇存柊XX鐨勫緟鍔?鐘舵€?骞舵彁渚涗簨瀹炰緷鎹€?
| 闃舵 | 姝ラ | 鎿嶄綔 | 绫诲瀷 |
|------|------|------|------|
| 瀹氫綅 | 1 | 璇?personal-todo-index 鈫?鎵惧埌鐩爣浜虹墿鐨勫緟鍔炲垪琛?| READ |
| 瀹氫綅 | 2 | 璇?board.md锛堢洰鏍囦汉鐗╂墍鍦ㄥ瓙椤圭洰锛夆啋 鎵惧埌鍏宠仈浠诲姟 | READ |
| 瀹氫綅 | 3 | 璇?issue-register 鈫?鎵惧埌鍏宠仈闂 | READ |
| 瀹氫綅 | 4 | 璇?risk-register 鈫?鎵惧埌鍏宠仈椋庨櫓 | READ |
| 瀹氫綅 | 5 | 鑻ヨ法椤圭洰 鈫?璇?portfolio/issues/issue-register | READ |
| 鍒ゆ柇 | 6 | 寰呭姙鍖归厤锛氱敤鎴蜂簨瀹炲搴斿摢浜涘緟鍔炴潯鐩?| JUDGE |
| 鍒ゆ柇 | 7 | 鐘舵€佸垽瀹氾細姣忔潯寰呭姙搴旀敼涓轰粈涔堢姸鎬?| JUDGE |
| 鍒ゆ柇 | 8 | 闂鍏抽棴鍒ゅ畾锛氬叧鑱旈棶棰樻槸鍚﹀凡瑙ｅ喅 | JUDGE |
| 鍒ゆ柇 | 9 | 椋庨櫓鍏抽棴鍒ゅ畾锛氬叧鑱旈闄╂槸鍚﹀凡瑙ｉ櫎 | JUDGE |
| 鍐欏叆 | 10 | 鏇存柊 personal-todo-index锛堢姸鎬?+ Source锛?| AUTO |
| 鍐欏叆 | 11 | 鏇存柊 daily-todo-index锛堝綋鏃ユ潯鐩姸鎬侊級 | AUTO |
| 鍐欏叆 | 12 | 鏇存柊 board.md锛堜换鍔＄姸鎬?杩涘害 + Change Log锛?| SUGGEST/AUTO(pending) |
| 鍐欏叆 | 13 | 鏇存柊 issue-register锛堥棶棰樼姸鎬侊級 | SUGGEST/AUTO(pending) |
| 鍐欏叆 | 14 | 鏇存柊 risk-register锛堥闄╃姸鎬侊級 | SUGGEST/AUTO(pending) |
| 鍐欏叆 | 15 | 鐧昏 pending-changes锛堣嫢鍐欎簨瀹炴簮锛?| AUTO |
| 琛ュ叏 | 16 | 鍒涘缓/鏇存柊褰撴棩涓汉鏃ユ姤锛圥F006 鍦烘櫙锛?| AUTO |
| 琛ュ叏 | 17 | 鏇存柊鏃ユ姤绱㈠紩 | AUTO |
| 杈撳嚭 | 18 | 鍙樻洿鎽樿 + 寤鸿鍚庣画鎿嶄綔锛堝彲鍏抽棴椤癸級 | 鈥?|

> 鍒ゆ柇闃舵锛堟楠?6-9锛夊繀椤荤粨鍚堜笂涓嬫枃鍏呭垎鎺ㄥ锛屼笉寰楀洜璺緞棰勫畾涔夎€岀畝鍖栧垽鏂€昏緫銆?
### WF-2 鏃ユ姤澶勭悊

瑙﹀彂锛氱敤鎴锋彁浜や釜浜烘棩鎶?椤圭洰鏃ユ姤銆?璺緞鎽樿锛氳 project-context + board 鈫?瑙ｆ瀽鏃ユ姤 鈫?姹囨€婚」鐩棩鎶?鈫?妫€娴嬭祫婧愬彉鍔?鈫?鍚屾寰呭姙绱㈠紩 鈫?鐢熸垚蹇収/瀹為檯 鈫?褰掓。妫€鏌ャ€?璇︾粏瑙勫垯瑙?`references/01-daily-report-rules.md`銆?
| 闃舵 | 璇绘枃浠?| 鍐欐枃浠?|
|------|--------|--------|
| 瑙ｆ瀽 | 涓汉鏃ユ姤鍘熸枃 | 鈥?|
| 姹囨€?| project-context, board, milestone-board | 椤圭洰鏃ユ姤 |
| 鑱斿姩 | board, risk-register, issue-register | summaries/{name}-progress.md, 鏈堝害绱㈠紩 |
| 寰呭姙鍚屾 | 鈥?| personal-todo-index, daily-todo-index, weekly-todo-index |
| 蹇収 | 鈥?| snapshots/daily, actuals/daily, history-index |
| 璧勬簮妫€娴?| resource-register | 锛堜粎寤鸿锛屼笉鑷姩鍐?register锛?|
| 褰掓。 | Change Log 娲昏穬鍖?| change-log/archive锛堣嫢瑙﹀彂锛?|

### WF-3 浼氳绾澶勭悊

瑙﹀彂锛氱敤鎴锋彁浜や細璁邯瑕?璇勫璁板綍銆?璺緞鎽樿锛氳В鏋愮邯瑕?鈫?鎻愬彇琛屽姩椤?鍐崇瓥/椋庨櫓/闂/鍙樻洿 鈫?鍚屾浜嬪疄婧?鈫?褰掓。銆?璇︾粏瑙勫垯瑙?`references/02-meeting-rules.md`銆?
| 闃舵 | 璇绘枃浠?| 鍐欐枃浠?|
|------|--------|--------|
| 瑙ｆ瀽 | 浼氳绾鍘熸枃 | 鈥?|
| 琛屽姩椤?| board锛堝凡鏈変换鍔★級 | backlog.md 鎴?board.md锛圫UGGEST锛?|
| 椋庨櫓/闂 | risk-register, issue-register | risk-register, issue-register锛圫UGGEST锛?|
| 鍐崇瓥 | decision-log | decision-log锛圫UGGEST锛?|
| 鍙樻洿 | change-log | change-log锛圫UGGEST锛?|
| 褰掓。 | meetings/index | meetings/index, meetings/YYYYMM/ |

### WF-4 闇€姹傚彉鏇村鐞?
瑙﹀彂锛氱敤鎴锋彁鍑洪渶姹傚彉鏇磋姹傘€?璺緞鎽樿锛氱櫥璁板彉鏇?鈫?褰卞搷鍒嗘瀽 鈫?CCB 鍐崇瓥 鈫?鎵瑰噯鍚庡悓姝ヤ簨瀹炴簮銆?璇︾粏瑙勫垯瑙?`references/08-change-control-rules.md`銆?
| 闃舵 | 璇绘枃浠?| 鍐欐枃浠?|
|------|--------|--------|
| 鐧昏 | requirement-register | change-log锛坰ubmitted锛?|
| 褰卞搷鍒嗘瀽 | board, milestone-board, risk-register, budget | 鈥?|
| 鍐崇瓥 | 鈥?| change-log锛坅pproved/rejected锛夛紙SUGGEST锛?|
| 鍚屾 | 鈥?| requirement-register, board, milestone-board, risk-register锛圫UGGEST锛?|

### WF-5 鍛ㄦ姤鐢熸垚

瑙﹀彂锛氱敤鎴疯姹?鍐欏懆鎶?"鐢熸垚鍛ㄦ姤"銆?璺緞鎽樿锛氶亶鍘嗗瓙椤圭洰 鈫?姹囨€诲畬鎴?椋庨櫓/闂/閲岀▼纰?鈫?鍚堝苟璺ㄩ」鐩簨椤?鈫?鐢熸垚姹囨€诲懆鎶ャ€?璇︾粏瑙勫垯瑙?`references/01-daily-report-rules.md` 搂3 + `references/09-portfolio-rules.md` 搂2銆?
| 闃舵 | 璇绘枃浠?| 鍐欐枃浠?|
|------|--------|--------|
| 瀛愰」鐩眹鎬?| project-index 鈫?鍚勫瓙椤圭洰 board, risk, issue, milestone | 鍚勫瓙椤圭洰鍛ㄦ姤 |
| 璧勬簮琛ュ厖 | resource-register, transfer-log | 鈥?|
| 椤圭洰闆嗘眹鎬?| 鍚勫瓙椤圭洰鍛ㄦ姤 + portfolio/risks + portfolio/resources | 椤圭洰闆嗘眹鎬诲懆鎶?|
| 鎴愭湰姹囨€?| 鍚勫瓙椤圭洰 budget | portfolio/budget-summary |

### WF-6 浜哄憳璧勬簮娴佽浆

瑙﹀彂锛氱敤鎴锋姤鍛婁汉鍛樺彉鍔紙杩涘満/绂诲満/鍊熻皟/璇峰亣/瑙掕壊鍙樻洿锛夈€?璺緞鎽樿锛氳瘑鍒被鍨?鈫?鐧昏娴佽浆 鈫?鏇存柊璧勬簮鐘舵€?鈫?妫€鏌ヨ祫婧愰闄?鈫?鑱斿姩浠诲姟/寰呭姙銆?璇︾粏瑙勫垯瑙?`references/09-portfolio-rules.md` 搂5銆?
| 闃舵 | 璇绘枃浠?| 鍐欐枃浠?|
|------|--------|--------|
| 璇嗗埆 | resource-register锛堝綋鍓嶇姸鎬侊級 | 鈥?|
| 鐧昏 | 鈥?| transfer-log锛圫UGGEST锛?|
| 鏇存柊鐘舵€?| 鈥?| resource-register锛圫UGGEST锛?|
| 椋庨櫓妫€鏌?| risk-register | risk-register锛堣嫢瑙﹀彂 RR-01~08锛孲UGGEST锛?|
| 浠诲姟鑱斿姩 | board锛堣浜哄悕涓嬩换鍔★級 | board锛堝缓璁噸鍒嗛厤/blocked锛孲UGGEST锛?|
| 寰呭姙鑱斿姩 | personal-todo-index | personal-todo-index锛圓UTO锛?|

### 9.1 鍒ゆ柇闃舵寮哄寲瑙勫垯

浠ヤ笅鍒ゆ柇姝ラ蹇呴』缁撳悎涓婁笅鏂囧厖鍒嗘帹瀵硷紝涓嶅緱鍥?WF 璺緞棰勫畾涔夎€岀畝鍖栵細

1. **寰呭姙鍖归厤**锛圵F-1 姝ラ 6锛夛細鐢ㄦ埛鍙ｈ堪浜嬪疄涓庡緟鍔炴潯鐩殑璇箟鍖归厤锛岄』鑰冭檻鍒悕銆佺缉鍐欍€佹ā绯婃弿杩般€?2. **鐘舵€佸垽瀹?*锛圵F-1 姝ラ 7锛夛細寰呭姙搴旀敼涓?done / in_progress / blocked 闇€鏍规嵁浜嬪疄瀹屾暣鎬у拰鍏宠仈瀹炰綋鐘舵€佺患鍚堝垽鏂€?3. **闂鍏抽棴鍒ゅ畾**锛圵F-1 姝ラ 8锛夛細鍏宠仈闂鏄惁"瀹屽叏瑙ｅ喅"杩樻槸"閮ㄥ垎缂撹В"锛岄』璇?issue-register 鍏ㄩ儴鐩稿叧鏉＄洰銆?4. **椋庨櫓鍏抽棴鍒ゅ畾**锛圵F-1 姝ラ 9锛夛細鍏宠仈椋庨櫓鏄惁鎵€鏈夎Е鍙戞潯浠跺潎宸叉秷闄わ紝椤昏 risk-register 搴斿鎺柦鍜屽叧闂潯浠躲€?5. **鏃ユ姤琛ュ叏鍒ゅ畾**锛圵F-1 姝ラ 16锛夛細浠呭綋鐢ㄦ埛鎻忚堪浜嗗叿浣撳伐浣滆繘灞曟椂鎵嶈Е鍙?PF006 鏃ユ姤琛ュ叏锛屽崟绾殑鐘舵€佹洿鏂版寚浠や笉鑷姩鍒涘缓鏃ユ姤銆?
